Reduce component size

--- a/src/features/auth/components/AuthLayout.module.scss
+++ b/src/features/auth/components/AuthLayout.module.scss
@@ -5,7 +5,7 @@
 
 .tabGroup {
   padding: 9px 13px;
-  background-color: rgba(32, 58, 144, 0.6);
+  background-color: rgb(114 130 184 / 60%);
   border-radius: 33px;
   display: inline-flex;
 
