--- a/src/features/auth/components/AuthLayout.module.scss
+++ b/src/features/auth/components/AuthLayout.module.scss
@@ -5,13 +5,7 @@
 
 .tabGroup {
   padding: 9px 13px;
-  background-color: rgb(114 130 184 / 60%);
+  background-color: #F0F5FF;
   border-radius: 33px;
   display: inline-flex;
-
-  :global {
-    .MuiButton-root {
-      color: white;
-    }
-  }
 }
